minor alignment fix

--- a/themes/csil/scss/senior-week.scss
+++ b/themes/csil/scss/senior-week.scss
@@ -97,9 +97,9 @@ header {
             width: 75%;
         }
         @media (min-width: $screen-lg-min) {
-            padding-top: 300px;
+            padding-top: 240px;
             padding-bottom: 140px;
-            width: 55%;
+            width: 45%;
         }
     }
 }
